[package]
name = "mt-rs"
authors = ["Santo Cariotti <santo@dcariotti.me>"]
version = "0.1.0"
edition = "2024"

[dependencies]
hex = { version = "0.4.3" }
sha2 = { version = "0.10.9" }
sha3 = "0.10.8"

[dev-dependencies]
criterion = { version = "0.6.0" }
rand = "0.8"

[[bench]]
name = "bigfile"
harness = false
