[package]
name = "mt-rs"
authors = ["Santo Cariotti <santo@dcariotti.me>"]
version = "0.1.0"
edition = "2024"

[dependencies]
blake3 = "1.8.2"
hex = "0.4.3"
rayon = "1.10.0"
sha2 = "0.10.9"
sha3 = "0.10.8"

[dev-dependencies]
criterion = { version = "0.6.0" }
rand = "0.8"

[[bench]]
name = "bigfile"
harness = false
