[package]
name = "mt-rs"
authors = ["Santo Cariotti <santo@dcariotti.me>"]
version = "0.2.0"
edition = "2024"
repository = "https://github.com/boozec/mt"
description = "Merkletrees in Rust. Generate Merkletree quickly for files and folders."
license = "BSD-3-Clause"

[dependencies]
blake3 = "1.8.2"
hex = "0.4.3"
rayon = "1.10.0"
sha2 = "0.10.9"
sha3 = "0.10.8"

[dev-dependencies]
criterion = { version = "0.6.0" }
rand = "0.9.1"

[[bench]]
name = "bigfile"
harness = false
